Update Latest Code

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -793,9 +793,9 @@
             <h5 class="modal-title text-center">Help</h5>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
-            <div class="modal-body">
+            <!-- <div class="modal-body">
                 <iframe width="100%" height="315"  src="http://www.geomeasure.in/how-to-use-geo-measure-area-calculator.php" frameborder="0" allowfullscreen></iframe>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
